# rayon

rayon-demo/: Cargo.toml  spawn_allocator_tests.sh
rayon-demo/src/: main.rs
