[package]
edition = "2018"
name = "rayon-demo"
version = "0.0.0"
authors = ["Niko Matsakis <niko@alum.mit.edu>"]
publish = false

[dependencies]
rayon = { path = "../" }
cgmath = "0.18"
docopt = "1"
fixedbitset = "0.3"
glium = "0.29"
lazy_static = "1"
rand = "0.8"
rand_xorshift = "0.3"
regex = "1"

mimalloc = { version = "0.1.25", optional = true }
tcmalloc = { version = "0.3.0", optional = true }
jemallocator = { version = "0.3.2", optional = true }
rpmalloc = { version = "0.2.0", optional = true }

[dependencies.serde]
version = "1.0.85"
features = ["derive"]

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi"] }

[dev-dependencies]
doc-comment = "0.3"
num = "0.3"
